--- a/src/components/layout/styles/admindashboard.module.css
+++ b/src/components/layout/styles/admindashboard.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: calc(100vh - 60px);
+
 
 
     .bookBox {
@@ -42,14 +42,41 @@
 .wrapper {
     display: grid;
     grid-template-columns: 250px 1fr;
+    height: calc(100dvh - 60px);
+
+    &>* {
+        height: 100%;
+    }
 
     .layout {
         border-right: 1px solid #ccc;
+        display: inline-flex;
+        text-align: start;
+        align-items: start;
 
-        .adminPanel {}
+        &>ul {
+            width: 100%;
+
+            &>li {
+                padding: 8px 12px;
+                cursor: pointer;
+                border-bottom: 1px solid #ccc;
+
+                &>a {
+                    display: flex;
+                }
+            }
+        }
+
+
     }
 
     .main {
         columns: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
     }
 }
