--- a/src/components/layout/styles/adminbooklist.module.css
+++ b/src/components/layout/styles/adminbooklist.module.css
@@ -1,42 +1,10 @@
-.bookList {
-    height: 100px;
-    border-collapse: collapse;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-    &>thead {
-        &>tr {
-            &>th {
-                border-collapse: collapse;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                background-color: #313131;
-                color: white;
-                text-transform: uppercase;
-                letter-spacing: 1px;
-            }
-        }
-
-        tr:hover td {
-            background-color: #f39c12;
-            color: white;
-        }
+.table{
+    tr{
+        border-bottom: 1px solid #ccc;
     }
-
-    &>tbody {
-        &>tr {
-            &>td {
-                width: 200px;
-                border-collapse: collapse;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                background-color: #ecf0f1;
-                color: #333;
-                border: 1px solid #ddd;
-            }
-
-            tr:nth-child(even) td {
-                background-color: #f2f2f2;
-            }
-        }
-
-
+    th, td{
+        padding: 6px;
+        border-right: 1px solid #ccc;
     }
 }
