--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  list-style: none;
 }
 
-a {
-  text-decoration: none;
-}
+
 
 img {
   width: 100%;
@@ -17,6 +15,6 @@ img {
   object-fit: cover;
 }
 
-button{
+/* button {
   cursor: pointer !important;
-}
+} */
